refactor: se reemplazaron todos los atributos src del layout ya que al generaban peticiones no controladas al servidor

--- a/public/views/default.layout.html
+++ b/public/views/default.layout.html
@@ -19,13 +19,13 @@
             <div class="circle-loader" style="float: left" data-id="destination"></div>
 
             <img data-id="btnUpLevelDirectory" class="icon-btn" title="Escalar directorio" 
-                 src="./external_libs/svg/level-up-alt.svg"/>
+                 data-src="./external_libs/svg/level-up-alt.svg"/>
             <img data-id="btnAddFolder" class="icon-btn" title="Nueva carpeta" 
-                 src="./external_libs/svg/folder-plus.svg"/>
+                 data-src="./external_libs/svg/folder-plus.svg"/>
             <img data-id="btnUploadFile" class="icon-btn"  title="Subir archivo" 
-                 src="./external_libs/svg/file-upload.svg"/>
+                 data-src="./external_libs/svg/file-upload.svg"/>
             <img data-id="btnPaste" class="icon-btn" data-class-disabled="w3-disabled" data-class-enabled="w3-border-blue" 
-                 title="Pegar" src="./external_libs/svg/paste.svg"/>
+                 title="Pegar" data-src="./external_libs/svg/paste.svg"/>
             <!--            <div style="width: 15px; display: inline-block;"></div>
                         <img id="btnMoreOptions" class="icon-btn" title="Mas opciones" 
                              src="./external_libs/svg/ellipsis-v.svg"/>-->
@@ -38,7 +38,7 @@
                 <li>
                     <a href="#"> 
                         <img title="home" style="width: 26px; height: 26px; cursor:pointer;" 
-                             src="./external_libs/svg/home.svg"/>
+                             data-src="./external_libs/svg/home.svg"/>
                     </a>
                 </li>
             </ul>
@@ -77,15 +77,15 @@
         <td style="vertical-align: bottom"></td>
         <td style="vertical-align: bottom; text-align: right;"></td>
         <td style="text-align: right;">
-            <img name="download" title="Descargar" src="./external_libs/svg/download.svg" 
+            <img name="download" title="Descargar" data-src="./external_libs/svg/download.svg" 
                  class="icon-btn-row" data-class-disabled="w3-disabled" />
-            <img name="move" title="Mover" src="./external_libs/svg/cut.svg" 
+            <img name="move" title="Mover" data-src="./external_libs/svg/cut.svg" 
                  class="icon-btn-row" data-class-disabled="w3-disabled" />
-            <img name="shared" title="Copiar enlace" src="./external_libs/svg/link.svg" 
+            <img name="shared" title="Copiar enlace" data-src="./external_libs/svg/link.svg" 
                  class="icon-btn-row" data-class-disabled="w3-disabled" />
-            <img name="edit" title="Renombrar" src="./external_libs/svg/edit.svg" 
+            <img name="edit" title="Renombrar" data-src="./external_libs/svg/edit.svg" 
                  class="icon-btn-row" data-class-disabled=" w3-disabled" />
-            <img name="delete" title="Borrar" src="./external_libs/svg/trash-alt.svg" 
+            <img name="delete" title="Borrar" data-src="./external_libs/svg/trash-alt.svg" 
                  class="icon-btn-row" data-class-disabled="w3-disabled" />
         </td>
     </tr>
@@ -112,7 +112,7 @@
                 <label>Nombre</label>
                 <input type="text" class="w3-input w3-border w3-round w3-small" name="name" value="" placeholder="" autocomplete="off">
                 <button class="w3-button w3-white w3-border w3-round w3-margin-top">Crear
-                    <img class="icon-btn-row" style="width: 14px; height: 14px;" src="./external_libs/svg/paper-plane.svg"/>
+                    <img class="icon-btn-row" style="width: 14px; height: 14px;" data-src="./external_libs/svg/paper-plane.svg"/>
                 </button>
             </form>
         </div>
@@ -134,7 +134,7 @@
                     <input readonly="" type="text" class="w3-bar-item">
                 </div>
                 <button type="submit" class="w3-button w3-white w3-border w3-round w3-margin-top">Subir
-                    <img class="icon-btn-row" style="width: 14px; height: 14px;" src="./external_libs/svg/paper-plane.svg"/>
+                    <img class="icon-btn-row" style="width: 14px; height: 14px;" data-src="./external_libs/svg/paper-plane.svg"/>
                 </button>
             </form>
         </div>
